--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 <!--Cloudstack-->
             </section>
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Thrive-5/">https://baay22.github.io/Thrive-5/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Thrive/Thrive-5/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Thrive/Thrive-5/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Thrive/Thrive-5/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Thrive/Thrive-5/index.html</a><br>
+                <a target="_bLank" href="https://visionary-sable-676fd6.netlify.app/">https://visionary-sable-676fd6.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
